<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	android:background="?attr/selectableItemBackgroundBorderless"
	app:cardCornerRadius="4dp"
	app:cardElevation="4dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="207dp"
		android:padding="8dp">

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV25"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.25" />

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV50"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="20dp"
			app:layout_constraintGuide_percent="0.5" />

		<TextView
			android:id="@+id/textView32"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/userId"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tvreturnuserid"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/userId" />

		<TextView
			android:id="@+id/textView37"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset_number"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView32" />

		<TextView
			android:id="@+id/tvreturnassetno"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnuserid"
			tools:text="@string/asset_number" />

		<TextView
			android:id="@+id/textView31"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView37" />

		<TextView
			android:id="@+id/tvreturnitemname"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnassetno"
			tools:text="@string/asset" />

		<TextView
			android:id="@+id/textView33"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/dateloan"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnitemname" />

		<TextView
			android:id="@+id/tvreturnitemdate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnitemname"
			tools:text="@string/dateTo" />

		<TextView
			android:id="@+id/textView34"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/status"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView33" />

		<TextView
			android:id="@+id/tvreturnstatus"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnitemdate"
			tools:text="Status" />

		<TextView
			android:id="@+id/tvReturn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/retun"
			android:textAlignment="center"
			android:textColor="@color/link"
			android:textSize="18sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvreturnstatus" />

	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
