<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	card_view:cardCornerRadius="4dp"
	card_view:cardElevation="4dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintBottom_toTopOf="@+id/textView33"
		app:layout_constraintTop_toTopOf="@+id/textView33">

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV25"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="91dp" />


		<TextView
			android:id="@+id/textView40"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/userId"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView_checkout_userId"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView42"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset_number"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView40" />

		<TextView
			android:id="@+id/textView_checkout_assetNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_userId" />

		<TextView
			android:id="@+id/textView44"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView42" />

		<TextView
			android:id="@+id/textView_checkout_assetDesc"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_assetNumber" />

		<TextView
			android:id="@+id/textView46"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/dateFrom"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_assetDesc" />

		<TextView
			android:id="@+id/textView_checkout_dateFrom"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_assetDesc" />

		<TextView
			android:id="@+id/textView48"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/dateTo"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView46" />

		<TextView
			android:id="@+id/textView_checkout_dateTo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_dateFrom" />

		<TextView
			android:id="@+id/textViewConfirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="16dp"
			android:text="@string/checkout_asset"
			android:textAlignment="center"
			android:textColor="@color/link"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_dateTo" />

		<TextView
			android:id="@+id/textViewLockerDetails"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/locker_details"
			android:textAlignment="center"
			android:textAllCaps="true"
			android:textColor="@color/link"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/textViewConfirm"
			app:layout_constraintTop_toBottomOf="@+id/textView_checkout_dateTo" />

	</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
