<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	app:cardCornerRadius="4dp"
	app:cardElevation="4dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp">

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV25"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.25" />

		<TextView
			android:id="@+id/textView16"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/userId"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView_check_in_userId"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView41"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset_number"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView16" />

		<TextView
			android:id="@+id/textView_check_in_assetNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_userId" />

		<TextView
			android:id="@+id/textView31"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView41" />

		<TextView
			android:id="@+id/textView_check_in_assetDescription"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_assetNumber" />

		<TextView
			android:id="@+id/textView33"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/date"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_assetDescription" />

		<TextView
			android:id="@+id/textView_check_in_dateTime"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_assetDescription" />

		<TextView
			android:id="@+id/textView34"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/location"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView33" />

		<TextView
			android:id="@+id/textView_check_in_location"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_dateTime" />

		<TextView
			android:id="@+id/textView_check_in_asset"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="16dp"
			android:text="@string/checkin_asset"
			android:textAlignment="center"
			android:textColor="@color/link"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView_check_in_location" />

	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
