<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	card_view:cardCornerRadius="4dp"
	card_view:cardElevation="4dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<!--app:layout_constraintBottom_toTopOf="@+id/textView33"
		app:layout_constraintTop_toTopOf="@+id/textView33">-->

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV25"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="91dp" />


		<TextView
			android:id="@+id/textView40"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/asset"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tvId1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="11dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginLeft="11dp"
			android:layout_marginRight="8dp" />

		<TextView
			android:id="@+id/textView42"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/asset_number"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView40" />

		<TextView
			android:id="@+id/tvAssetNo"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvId1" />

		<TextView
			android:id="@+id/textView44"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/itemInventoryNo"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView42" />

		<TextView
			android:id="@+id/tvName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="12dp"
			android:layout_marginRight="12dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvAssetNo" />

		<TextView
			android:id="@+id/textView46"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/itemcategory"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvName" />

		<TextView
			android:id="@+id/tvCategory"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toBottomOf="@+id/tvName" />

		<Button
			android:id="@+id/btnRequestitem"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/request"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

		<!--android:textColor="@color/link"-->



	</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
