<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/POPendingBooking"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	app:cardCornerRadius="4dp"
	app:cardElevation="4dp">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV25"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.25" />

		<android.support.constraint.Guideline
			android:id="@+id/guidelineV50"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="20dp"
			app:layout_constraintGuide_percent="0.5" />

		<TextView
			android:id="@+id/textView18"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:text="@string/userId"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView20"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/lab"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView18" />

		<TextView
			android:id="@+id/textView22"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/workbench"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView20" />

		<TextView
			android:id="@+id/textView24"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/date"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView22" />

		<TextView
			android:id="@+id/textView26"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/time"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView24" />

		<TextView
			android:id="@+id/textView28"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:text="@string/reason"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView26" />

		<ImageButton
			android:id="@+id/imageButtonAccept"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginBottom="4dp"
			android:layout_marginTop="4dp"
			android:background="@null"
			android:scaleType="fitCenter"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/guidelineV50"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textViewReason"
			app:srcCompat="@drawable/ic_tick" />

		<ImageButton
			android:id="@+id/imageButtonReject"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginBottom="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="4dp"
			android:background="@null"
			android:scaleType="fitCenter"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV50"
			app:layout_constraintTop_toBottomOf="@+id/textViewReason"
			app:srcCompat="@drawable/ic_cross" />

		<TextView
			android:id="@+id/textViewUid"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView18" />

		<TextView
			android:id="@+id/textViewLabid"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView20" />

		<TextView
			android:id="@+id/textViewBenchid"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView22" />

		<TextView
			android:id="@+id/textViewDate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView24" />

		<TextView
			android:id="@+id/textViewTime"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView26" />

		<TextView
			android:id="@+id/textViewReason"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:text="TextView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guidelineV25"
			app:layout_constraintTop_toTopOf="@+id/textView28" />

	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
