<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp"
	tools:context="com.sit.labresourcemanagement.Presenter.Fragment.Student.StudentScanToReturnItem">


	<TextView
		android:id="@+id/tvLocation"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/location"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvReturnItem" />

	<TextView
		android:id="@+id/textView47"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/locker"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="@+id/tvLocation"
		app:layout_constraintStart_toStartOf="@+id/tvLocation"
		app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

	<TextView
		android:id="@+id/textView49"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/pin"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="@+id/textView47"
		app:layout_constraintStart_toStartOf="@+id/textView47"
		tools:layout_editor_absoluteY="117dp" />

	<TextView
		android:id="@+id/tvLocation"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="8dp"
		android:text="TextView"
		app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/tvLocation"
		app:layout_constraintTop_toTopOf="@+id/tvLocation" />

	<TextView
		android:id="@+id/tvLocker"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="8dp"
		android:text="TextView"
		app:layout_constraintBottom_toBottomOf="@+id/textView47"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView47"
		app:layout_constraintTop_toTopOf="@+id/textView47" />

	<TextView
		android:id="@+id/tvPin"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="8dp"
		android:text="TextView"
		app:layout_constraintBottom_toBottomOf="@+id/textView49"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/textView49"
		app:layout_constraintTop_toTopOf="@+id/textView49" />

	<TextView
		android:id="@+id/tvReturnItem"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="TextView"
		android:textSize="15sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>

